k8s/nginx/service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ${APP_NAME}
  name: ${APP_NAME}
spec:
  type: LoadBalancer
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: ${APP_NAME}
  # externalTrafficPolicy: Cluster
