k8s/nginx/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: ${APP_NAME}-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /${APP_NAME}

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ${APP_NAME}
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`mainserv03.lan`) && PathPrefix(`/${APP_NAME}`)
      kind: Rule
      services:
        - name: ${APP_NAME}
          port: 80
      middlewares:
        - name: ${APP_NAME}-stripprefix
    - match: Host(`${APP_NAME}.akhbari.us`)
      kind: Rule
      services:
        - name: ${APP_NAME}
          port: 80
  tls:
    secretName: akhbari-us-production
